--- a/src/SchoolMS.Api/SchoolMS.Api.csproj
+++ b/src/SchoolMS.Api/SchoolMS.Api.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Asp.Versioning.Mvc" />
@@ -14,10 +14,13 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Swashbuckle.AspNetCore" />
 		<PackageReference Include="Scalar.AspNetCore" />
 	</ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SchoolMS.Infrastructure\SchoolMS.Infrastructure.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\SchoolMS.Application\SchoolMS.Application.csproj" />
+		<ProjectReference Include="..\SchoolMS.Contracts\SchoolMS.Contracts.csproj" />
+		<ProjectReference Include="..\SchoolMS.Infrastructure\SchoolMS.Infrastructure.csproj" />
+	</ItemGroup>
 
 </Project>
