--- a/src/SchoolMS.Api/appsettings.json
+++ b/src/SchoolMS.Api/appsettings.json
@@ -7,5 +7,11 @@
     "TokenExpirationInMinutes": 60,
     "Issuer": "localhost",
     "Audience": "localhost"
+  },
+  "AppSettings": {
+    "LocalCacheExpirationInMins": 5,
+    "DistributedCacheExpirationMins": 5,
+    "CorsPolicyName": "SchoolMS",
+    "AllowedOrigins": [ "http://localhost:3000" ]
   }
 }
