--- a/src/SchoolMS.Application/SchoolMS.Application.csproj
+++ b/src/SchoolMS.Application/SchoolMS.Application.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -9,8 +9,13 @@
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Hybrid" />
+		<PackageReference Include="MediatR" />
+
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\SchoolMS.Domain\SchoolMS.Domain.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Features\Identity\Queries\" />
 	</ItemGroup>
 </Project>
