--- a/src/SchoolMS.Application/SchoolMS.Application.csproj
+++ b/src/SchoolMS.Application/SchoolMS.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+		<PackageReference Include="Microsoft.AspNetCore.WebUtilities" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Hybrid" />
 		<PackageReference Include="MediatR" />
@@ -16,6 +17,6 @@
 	  <ProjectReference Include="..\SchoolMS.Domain\SchoolMS.Domain.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-	  <Folder Include="Features\Identity\Queries\" />
+	  <Folder Include="Features\Departments\Commands\UpdateDepartment\NewFolder\" />
 	</ItemGroup>
 </Project>
