--- a/src/SchoolMS.Contracts/SchoolMS.Contracts.csproj
+++ b/src/SchoolMS.Contracts/SchoolMS.Contracts.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SchoolMS.Application\SchoolMS.Application.csproj" />
     <ProjectReference Include="..\SchoolMS.Domain\SchoolMS.Domain.csproj" />
   </ItemGroup>
 
