--- a/src/SchoolMS.Infrastructure/SchoolMS.Infrastructure.csproj
+++ b/src/SchoolMS.Infrastructure/SchoolMS.Infrastructure.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\SchoolMS.Domain\SchoolMS.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
 </Project>
