--- a/src/SchoolMS.Application/SchoolMS.Application.csproj
+++ b/src/SchoolMS.Application/SchoolMS.Application.csproj
@@ -17,6 +17,7 @@
 	  <ProjectReference Include="..\SchoolMS.Domain\SchoolMS.Domain.csproj" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Folder Include="Features\Assignments\Qureies\" />
 	  <Folder Include="Features\Departments\Commands\UpdateDepartment\NewFolder\" />
 	</ItemGroup>
 </Project>
