--- a/src/SchoolMS.Api/appsettings.json
+++ b/src/SchoolMS.Api/appsettings.json
@@ -14,5 +14,34 @@
     "DistributedCacheExpirationMins": 10,
     "CorsPolicyName": "SchoolMS",
     "AllowedOrigins": [ "http://localhost:3000" ]
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "api"
+    }
   }
 }
