--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,36 +1,39 @@
 <Project>
-  <PropertyGroup>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageVersion Include="EFCore.BulkExtensions" Version="9.0.1" />
-    <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
-    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.AspNetCore.Authorization" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.Extensions.Caching.Hybrid" Version="9.6.0" />
-    <PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.6" />
-    <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.6" />
-    <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
-    <PackageVersion Include="Serilog.Sinks.Seq" Version="9.0.0" />
-    <PackageVersion Include="Scalar.AspNetCore" Version="2.5.3" />
-    <PackageVersion Include="MediatR" Version="12.5.0" />
-    <PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.1" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.2" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageVersion Include="xunit" Version="2.9.2" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
-    <PackageVersion Include="Moq" Version="4.20.72" />
-  </ItemGroup>
+	<PropertyGroup>
+		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageVersion Include="Asp.Versioning.Mvc" Version="8.1.0" />
+		<PackageVersion Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+		<PackageVersion Include="EFCore.BulkExtensions" Version="9.0.1" />
+		<PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+		<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.AspNetCore.Authorization" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.Extensions.Caching.Hybrid" Version="9.6.0" />
+		<PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.9" />
+		<PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.6" />
+		<PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.6" />
+		<PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
+		<PackageVersion Include="Serilog.Sinks.Seq" Version="9.0.0" />
+		<PackageVersion Include="Swashbuckle.AspNetCore" Version="9.0.1" />
+		<PackageVersion Include="Scalar.AspNetCore" Version="2.5.3" />
+		<PackageVersion Include="MediatR" Version="12.5.0" />
+		<PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.1" />
+		<PackageVersion Include="coverlet.collector" Version="6.0.2" />
+		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+		<PackageVersion Include="xunit" Version="2.9.2" />
+		<PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
+		<PackageVersion Include="Moq" Version="4.20.72" />
+	</ItemGroup>
 </Project>
